# agent-governance

./: .gitignore  README.md
.github/: CODEOWNERS
.github/workflows/: bootstrap-schema.yml
.governance/: policy.yaml
.governance/approvals/: adapter-thinness-v1.yaml  bootstrap-trial-v1.yaml  plan-quality-v1.yaml  probe-conclusion-v1.yaml  repo-structure-v1.yaml  schema-draft-v1.yaml
.governance/authorizations/: GOV-BOOTSTRAP-M0.yaml  GOV-CLI-M1.yaml
.governance/delivery-requests/: GOV-BOOTSTRAP-M0.yaml
adapters/gitea/: verify.yml
adapters/github/: verify.yml
cli/: pyproject.toml
cli/src/governance/: __init__.py  cli.py  fixtures_runner.py  schema_check.py
cli/src/governance/canary/: uncovered.py  unimported.py
cli/src/governance/subchecks/: __init__.py  acceptance.py  authorization.py  common.py  coverage.py  effectiveness.py  frozen.py  plan.py  policy.py  schema.py
cli/src/governance/verify/: __init__.py  runner.py  types.py
cli/tests/: test_coverage.py  test_fixtures.py  test_verify.py
docs/: hooks-install.md
fixtures/: README.md
fixtures/m1/: results.json
methodology/: AI_DELIVERY_METHODOLOGY.md
schemas/: README.md  authorization-record.schema.json  ci-attestation.schema.json  delivery-request.schema.json  evidence-scenes.schema.json  exception.schema.json  human-approval.schema.json  implementation-plan.schema.json  modules.schema.json  requirements-manifest.schema.json  verification-plan.schema.json
schemas/v1/: authorization-record.schema.json  ci-attestation.schema.json  (+5 more)
templates/: debate.md  goal-prompt.md
(+68 files in other folders)
