[project]
name = "agent-governance"
version = "0.0.1"
description = "Governance CLI bootstrap scaffold"
requires-python = ">=3.12,<3.13"
dependencies = [
  "jsonschema>=4.23,<5",
  "PyYAML>=6.0,<7",
]

[project.scripts]
governance = "governance.cli:main"

[build-system]
requires = ["hatchling>=1.25,<2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/governance"]

[tool.pytest.ini_options]
markers = [
  "dualmode: deterministic local and CI behavior",
]

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[dependency-groups]
dev = [
    "diff-cover>=10.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
